Make sure bg img covers background

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@
   background-attachment: fixed;
   background-position: center center;
   background-repeat: fixed;
+  background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
